exports[`<QueryField /> component should render a query field component with no value 1`] = `
<div
  data-css-1ykjhyy="">
  <input
    data-css-bj9j4d=""
    onChange={undefined}
    value={undefined} />
</div>
`;

exports[`<QueryField /> component should render a query field component with some value 1`] = `
<div
  data-css-1ykjhyy="">
  <input
    data-css-bj9j4d=""
    onChange={undefined}
    value="TEST" />
</div>
`;
